[package]
name = "st0x-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []
test-support = []

[dependencies]
alloy.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

st0x-evm = { path = "../evm" }
st0x-execution = { path = "../execution" }

[dev-dependencies]
alloy-primitives.workspace = true
rain-math-float.workspace = true
serde_json.workspace = true
st0x-float-macro = { path = "../float-macro" }
tokio.workspace = true

[lints]
workspace = true
