[package]
name = "st0x-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []
test-support = ["dep:anyhow", "st0x-evm/mock"]

[dependencies]
alloy.workspace = true
anyhow = { workspace = true, optional = true }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

st0x-evm = { path = "../evm" }
st0x-execution = { path = "../execution" }

[dev-dependencies]
anyhow.workspace = true
alloy-primitives.workspace = true
rain-math-float.workspace = true
serde_json.workspace = true
st0x-float-macro = { path = "../float-macro" }
tokio.workspace = true

[lints]
workspace = true
