[package]
name = "st0x-tokenization"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Expose test-only constructors and helpers (MockTokenizer, setup_anvil, ...)
test-support = ["st0x-evm/local-signer", "st0x-evm/test-support"]
# Mock tokenization HTTP API for dry-run testing from downstream crates
mock = ["test-support", "dep:httpmock", "dep:anyhow", "st0x-execution/mock"]

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
anyhow = { workspace = true, optional = true }
async-trait.workspace = true
chrono.workspace = true
httpmock = { workspace = true, optional = true }
rain-math-float.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

st0x-evm.workspace = true
st0x-execution.workspace = true
st0x-float-serde.workspace = true

[dev-dependencies]
httpmock.workspace = true
st0x-evm = { workspace = true, features = [
  "mock",
  "test-support",
  "local-signer",
] }
st0x-execution = { workspace = true, features = ["mock", "test-support"] }
st0x-float-macro.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-test.workspace = true

[lints]
workspace = true
